build/classes/messageio/parsing/Messages.g4
grammar Messages;

@header {
package messageio.parsing;
}

io : message*
   ;
   
message : 'message' ID '{' property* '}'
   ;
   
property : TYPE ID ';'
   ;
   
TYPE : 'int'
   | 'double'
   | 'string'
   ;

ID : [a-zA-Z_]+
   ;
   

WS : [ \t\r\n]+ -> skip
   ;
